minor overflow main bar fix

--- a/src/app/restaurantdetail/restaurantDetail.component.css
+++ b/src/app/restaurantdetail/restaurantDetail.component.css
@@ -40,6 +40,7 @@
   -moz-box-shadow: 0px -3px 11px 1px rgba(50, 50, 50, 0.38);
   box-shadow: 0px -3px 11px 1px rgba(50, 50, 50, 0.38);
   display: none;
+  overflow: hidden;
 
 }
 
